# vimcord

./: .gitignore  Cargo.toml  Dockerfile.arch  README.md  todo.md
.github/workflows/: aur.yml  cd.yml  rust.yml
readme/: todo.md
src/: config.rs  logs.rs  main.rs
src/api/: dm.rs  emoji.rs  gateway.rs  message.rs  mod.rs
src/api/message/: create_message.rs
src/api/user/: get_current_user_guilds.rs  mod.rs
src/model/: channel.rs  guild.rs
src/ui/: draw.rs  events.rs  mod.rs  vim.rs
