[package]
name = "rivet"
version = "0.1.2"
edition = "2024"
description = "A Terminal UI Discord Client in Rust"
repository = "https://github.com/YetAnotherMechanicusEnjoyer/Rivet"
homepage = "https://github.com/YetAnotherMechanicusEnjoyer/Rivet"
readme = "README.md"
license = "MIT"
authors = [
  "YetAnotherMechanicusEnjoyer <https://github.com/YetAnotherMechanicusEnjoyer>",
]
keywords = ["api", "terminal", "discord", "tui", "tokio", "crossterm"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.42"
crossterm = "0.29.0"
ctrlc = "3.5.1"
dotenvy = "0.15.7"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
unicode-width = "0.2.0"
